--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,13 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:label="BackUpAlbum"
+        android:theme="@style/AppTheme" >
+
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name=".MainLogin"
-            android:label="@string/title_activity_main_login" >
+            android:label="Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,20 +22,17 @@
         </activity>
         <activity
             android:name=".NewAccountActivity"
-            android:label="@string/title_activity_new_account" >
+            android:label="New Account" >
         </activity>
         <activity
             android:name=".LoggedAccountActivity"
-            android:label="@string/title_activity_logged_account" >
+            android:label="Logged In" >
         </activity>
         <activity
             android:name=".OpenedAlbumActivity"
-            android:label="@string/title_activity_opened_album" >
+            android:label="Album" >
         </activity>
-        <activity
-            android:name=".AddImageActivity"
-            android:label="@string/title_activity_add_image" >
-        </activity>
+
     </application>
 
 </manifest>
